static/css/style.css
:root {
    --f1-red: #E13726;
    --white: #fff;
    --black: #000;
}

@font-face {
    font-family: Formula1-Black;
    src: url('Formula1-Black.ttf');
}

@font-face {
    font-family: Formula1-Bold;
    src: url('Formula1-Bold.ttf');
}

@font-face {
    font-family: Formula1-Regular;
    src: url('Formula1-Regular.ttf');
}

@font-face {
    font-family: Formula1-Wide;
    src: url('Formula1-Wide.ttf');
}

.min-section-height {
    min-height: 15rem;
    max-height: 35rem;
}

.section {
    clear: both;
}

.white-section {
    color: var(--black);
    background-color: var(--white);
    padding-bottom: 1.75rem;
}

.black-section {
    color: var(--white);
    background-color: var(--black);
    padding-bottom: 1.75rem;
}

/* header */

#logo-image {
    height: 100%;
}

/* navbar */

header {
    margin: 0;
    padding: 0;
}

.navbar {
    border-bottom: 1.75rem solid var(--f1-red);
    padding: 0;
}

.nav-link {
    font-family: 'Formula1-Regular';
    color: var(--black);
    text-align: center;
    align-items: center;
    font-size: larger;
}

.nav-link:hover {
    color: var(--f1-red);
}

.nav-item {
    display: flex;
    align-items: center;
}

.navbar-toggler {
    background-color: var(--f1-red);
    margin: 0 auto;
}

.navbar-toggler-icon .fa-bars {
    color:var(--white); 
    font-size: 1.75rem;
}

.btn-f1 {
    font-family: 'Formula1-Bold';
    background-color: var(--f1-red);
    color: var(--white);
    font-weight: bold;
}

.btn-f1:hover {
    background-color: var(--black);
    color: var(--f1-red);
}

.red-section {
    color: var(--white);
    background-color: var(--f1-red);
    padding-bottom: 1.75rem;
}

/* race details */

/* cards how to book */
.card-text {
    color: var(--black);
}

/* footer */
footer ul {
    padding: 0;
}

footer a {
    text-decoration: none;
}

.socials li {
    display: inline;
}

.socials i {
    color: var(--white);
    font-size: 2.5rem;
    width: 23.5%;
    text-align: center;
    padding: 1.75rem 0 1rem;
    transition-delay: 0.2s;
}

.socials i:hover, .section-links li a:hover {
    color: var(--black);
}

.section-links li {
    text-align: center;
    list-style: none;
}

.section-links a {
    color: var(--white);
    font-weight: bold;
    padding: 0.5rem 0;
    font-family: 'Formula1-Regular';
}

